Auswertung done :checkered_flag:

--- a/lit.bib
+++ b/lit.bib
@@ -167,3 +167,10 @@
 	urldate      = {2022-05-31},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/2005007/mod_resource/content/2/V704.pdf},
 }
+
+@online{Gestis,
+	title = 	{GESTIS-Stoffdatenbank},
+	url = {https://www.dguv.de/ifa/gestis/gestis-stoffdatenbank/index.jsp},
+	urldate = {2022-06-02},
+	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
+}
