--- a/v704/content/theorie.tex
+++ b/v704/content/theorie.tex
@@ -139,9 +139,10 @@ Der Wirkungsquerschnitt des Comptoneffektes ist durch
 \end{equation}
 gegeben. Dabei ist $\epsilon$ das Verhältnis von der Gammaquantenenergie zur Ruheenergie des Elektrons. Mit diesem Wirkungsquerschnitt lässt sich die Comptonabsorptionskonstante 
 bestimmen. Diese ist gegeben durch 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:mu_com}
     \mu_{\symup{com}} = n\sigma_{\symup{com}}(\epsilon) = \frac{zN_L\rho}{M}\sigma_{\symup{com}}(\epsilon)
-\end{equation*}
+\end{equation}
 gegeben. Aufgrund der Energieabhängigkeit des Comptonwirkungsquerschnittes kann für kleine Energien, was physikalisch eine elastische Streuung beschreibt, der 
 \textit{Thomasonsche Wirkungsquerschnitt $\sigma_com$} genähert werden. Dieser lautet 
 \begin{equation}
@@ -172,5 +173,6 @@ Der in der \autoref{fig:Absorptionskurve} eingezeichnete Punkt $R_{\symup{max}}$
 
 Aus der maximalen Reichweite kann ebenfalls die maximale Energie der $\beta$\,-Teilchen bestimmt werden. Dies gelingt über den Zusammenhang 
 \begin{equation}
-    E_{\symup{max}} = 1.92\sqrt{E_{\symup{max}}^2 + 0.22E_{\symup{max}}}.
+    \label{eqn:E_max}
+    E_{\text{max}} = 1.92\sqrt{R_{\text{max}}^2 + 0.22R_{\text{max}}}.
 \end{equation}
