--- a/v704/content/auswertung.tex
+++ b/v704/content/auswertung.tex
@@ -166,8 +166,7 @@ Mit diesem Wert lässt sich wiederum die Massenbelegung
     R_\text{max} = \rho \cdot D_\text{max} = \qty{0.092+-0.004}{\gram\per\square\centi\metre}
 \end{equation*}
 ermitteln. Dazu wird die Dichte von Aluminium $\rho_\text{Alu} = \qty{2.7}{\gram\per\cubic\centi\metre}$ \cite{Gestis} verwendet.
-Mit \autoref{eqn:E_max} ergibt sich die maximale Energie der $\gamma$-Strahlung zu
+Mit \autoref{eqn:E_max} ergibt sich die maximale Energie der $\beta$-Strahlung zu
 \begin{equation*}
   E_\text{max} = \qty{0.325(0.009)}{\mega\electronvolt}.
 \end{equation*}
-Dies entspricht einer Wellenlänge von $\lambda_\text{max} = \qty{3.81(0.10)}{\pico\metre}$.
