das ende is echt unschön aber ka iwie bin ich heude net kreativ kannst ja ma schauen ob ok un soß

--- a/lit.bib
+++ b/lit.bib
@@ -112,6 +112,14 @@
 	publisher 	= {Springer Verlag},
 }
 
+@book{physikalischesGrundpraktikum,
+	title 		= {Das neue physikalische Grundpraktikum},
+	author 		= {Eichler, Hans Joachim and Kronfeldt, Heinz-Detlef and Sahm, Jürgen},
+	year 		= {2016},
+	isbn 		= {978-3-662-49022-8},
+	publisher 	= {Springer Verlag},
+}
+
 @online{NIST,
 	title = 	{X-Ray Transition Energies Data Base},
 	url = {https://physics.nist.gov/cgi-bin/XrayTrans/search.pl?element=Cu&lower=&upper=&units=eV},
