--- a/v704/content/diskussion.tex
+++ b/v704/content/diskussion.tex
@@ -1,2 +1,28 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Im ersten Teil dieses Versuches wurde die Absorptionskurve von $\gamma$\,-Strahlung für Blei und Zink als Aborberschicht aufgenommen. Aus einer linaren Ausgleichsrechung der
+aufgenommenen Absorptionskurven wird für beide Materialien die Absorptionskonstante und die Nullzählrate bestimmt. Zu Blei wurde aus den Messwerten die Absorptionskonstante 
+$\mu_\text{Pb} = \qty{82.7 +- 3.1}{\per\metre}$ bestimmt. Im Vegleich mit der Comptonabsorptionskonstante $\mu_\text{com, Pb} = \qty{69.09}{\per\metre}$ fällt ein Differenz der Werte auf.
+Daraus ist zu deuten, dass der Comptoneffekt zwar eine entscheidene Rolle in vorliegenden Absorption spielt, er aber nicht der einzige auftretende Absorptionseffekt ist.
+Die aus den Messwerten bestimmte Nullzälrate wurde zu $N_{0, \text{Pb}} = \qty{105 +- 6}{\per\second}$ bestimmt. Diese weicht um $\symup{\Delta N_{0, \text{Pb}}} = \num{2 +- 6}\%$
+von der Nullmessung ab, welche in der \autoref{sec:Durchführung} beschrieben wurde.
+
+Aus der Messreihe zu Zink ergibt sich die Absorptionskonstante $\mu_{\text{Zn}} = \qty{37.8 +- 1.9}{\per\metre}$. Hierzu lautet die Comptonabsorptionskonstante 
+$\mu_{\text{com, Zn}} = \qty{50.61}{\per\metre}$. Die experimentelle Absorptionskonstante liegt unter dem Wert der Comptonabsorptionskonstante zu Zink. Daraus wird gedeutet, 
+dass der Comptoneffekt die überwiegende Absorptionseffekt ist. Allerdings müsste in diesem Fall die gesamte Absorptionskonstante ungefähr gleich der Comptonabsorptionskonstante 
+sein, weshalb auf einen statistische Abweichung der Messwerte geschlossen werden kann. 
+Die Nullzählrate liegt bei $N_{0, \text{Zn}} = \qty{111.1 +- 2.5}{\per\second}$ und weicht somit um $\symup{\Delta N_{0, \text{Zn}}} = \num{8.2 +- 3.1}\%$ von der Nullmessung ab.
+
+Die Abweichungen der Zählraten sind keine Abweichung von Literaturwerten, sonder von einer statistisch fehlerbehafteten Messung, weshalb von dieser nicht auf die Qualität der
+Messung geschlossen werden kann. Ebenso unterliegen die Absorptionskonstanten statistischen Fehlern. 
+Jedoch kann angemerkt werden, dass der verwendete Cs-137-Strahler lediglich $\gamma$\,-Quanten abstrahlt, welche eine Energie von $E_\gamma = \qty{662}{\kilo\electronvolt}$
+\cite{physikalischesGrundpraktikum} haben. Daher ist der Paarbildungseffekt in der Deutung der Absorptionskonstanten auszuschließen.
+
+Im zweiten Teil dieses Versuches wurde dann die Absorptionskurve von $\beta$\,-Strahlung, aus einer Technezium-99 Strahlungsquelle, aufgenommen. Aus der durchgeführten 
+Regression wurde die maximale Strahlungsreichweite in einer Aluminiumabsorberschicht bestimmt. Diese lautet $R_\text{max} = \qty{0.092 +- 0.004}{\gram\per\centi\metre\squared}$. 
+Die dazugehörige maximale Energie $E_\text{max}$ der abgestrahlten $\beta$\,-Telchen ergibt sich zu $E_\text{max} = \qty{0.325 +- 0.009}{\mega\electronvolt}$. Der Literaturwert
+der maximalen Energie der $\beta$\,-Telchen bei diesem Übergang lautet $E_{\text{max, Lit}} = \qty{0.294}{\mega\electronvolt}$. Daher ergibt sich eine Abweichung von
+$\Delta E_\text{max} = \num{10.7 +- 2.9}\%$. 
+
+Zusammenfassend genügen alle Abweichungen der statistischen Unsicherheit, welche bei diesem Versuchsaufbau gegeben ist. Die Präzesion der Messung ist ausreichend um 
+von einer qualitativen Messung zu sprechen.
