--- a/v704/content/auswertung.tex
+++ b/v704/content/auswertung.tex
@@ -19,7 +19,7 @@ Die Fehlerrechnung wird in \textit{Python} unter Verwendung des Paketes \textit{
 \begin{table}
   \centering
   \caption{Messwerte der Absorption von $\gamma$-Strahlung eines Cäsium-137-Strahlers. Es werden Blei und Zink als Absorber verwendet. $d$ beschreibt die Dicke der Absorberschicht und
-  $N$ die Zählraten des \textit{GMZ} während der Zeit $t$.}
+  $N_t$ die Zählraten des \textit{GMZ} während der Zeit $t$.}
   \label{tab:Mess_gamma}
   \begin{tabular}{S[table-format = 2.1] S[table-format = 5.0] S[table-format = 3.0] | S[table-format = 2.0] S[table-format = 5.0] S[table-format = 3.0]}
     \toprule
@@ -116,7 +116,7 @@ $\qty{900}{\second}$ gemessen. Dies ergibt ein Hintergrundsignal von $\qty{ 0.61
 \begin{table}
   \centering
   \caption{Messwerte der Absorption von $\beta$-Strahlung eines Technezium-99-Strahlers. Das Absorbermaterial ist Aluminium. $d$ beschreibt die Dicke der Absorberschicht und
-  $N$ die Zählraten des \textit{GMZ} während der Zeit $t$.}
+  $N_t$ die Zählraten des \textit{GMZ} während der Zeit $t$.}
   \label{tab:Mess_beta}
   \begin{tabular}{S[table-format = 3.0] @{${}\pm{}$} S[table-format = 1.1] S[table-format = 4.0] S[table-format = 3.0]}
     \toprule
