--- a/v704/content/durchfuehrung.tex
+++ b/v704/content/durchfuehrung.tex
@@ -3,7 +3,7 @@
 Zur Durchführung dieses Versuches wird der in \autoref{fig:Aufbau} gezeigte Versuchsaufbau verwendet. Im wesentlichen besteht dieser aus einem radioaktiven Präparat
 ($\beta$- oder $\gamma$-Strahler), einer Halterung der Absorberplatten und einem Geiger-Müller-Zählrohr (\textit{GMZ}). Es können Absorberplatten verschiedener Materialien und verschiedener
 Dicke installiert werden.
-Die emittierte Strahlung durchläuft die Absorbermaterialien und wird anschließend (sofern sie nicht vollständig absorbiert wurde) im Geiger-Müller-Zählrohr registriert. 
+Die emittierte Strahlung durchläuft die Absorbermaterialien und wird anschließend (sofern sie nicht vollständig absorbiert wurde) im Geiger-Müller-Zählrohr detektiert. 
 Die Zählraten des \textit{GMZ} können über einen zuvor eingestellten Zeitbereich ermittelt und an einer digitalen Anzeige abgelesen werden.
 
 \begin{figure}
