--- a/v704/content/theorie.tex
+++ b/v704/content/theorie.tex
@@ -1,8 +1,8 @@
 \section{Zielsetzung}
 \label{sec:Ziel}
 In diesem Versuch wird das Absorptionsverhalten von $\beta$\,- und $\gamma$\,-Strahlung untersucht. Aus dem Absorptionsverhalten wird dann für $\beta$\,-Strahlung die 
-maximale Energie der $\beta$\,- Teilchen bestimmt. Für $\gamma$\,-Strahlung werden die relevanten Größen des exponentiellen Absorptionsgesetzes \ref{eqn:Absorbgesetz} bestimmt.
-Gelingt dies wird ebenfalls auf den vorliegenden Absorptionsmechanismus geschlossen.
+maximale Energie der $\beta$\,- Teilchen bestimmt. Für $\gamma$\,-Strahlung werden die relevanten Größen des exponentiellen Absorptionsgesetzes \ref{eqn:eabsorbgesetz} bestimmt.
+Daraus kann auf den vorliegenden Absorptionsmechanismus geschlossen werden.
 
 \section{Theorie}
 \label{sec:Theorie}
@@ -12,19 +12,19 @@ beiden verwendeten Strahlungsarten bekannt sein. Diese Themen werden in den folg
 \subsection{\texorpdfstring{$\gamma$-Strahlung}{Gamma-Strahlung}}
 \label{subec:Gammastrahlung}
 $\gamma$\,-Quanten können entstehen, wenn ein angeregter Atomkern, also ein Atomkern mit erhöhter Energie, in einen niederenergetischen und stabileren Zustand zurückfällt. Die 
-dabei entstehende Energiedifferenz wird in Form von $\gamma$\,-Quanten frei. Ein $\gamma$\,-Quant ist allerdings kein Teilchen im klassischem Sinne. Ebenfalls können "einzelne"
-$\gamma$\,-Quanten nicht nur durch ihren Wellencharakter beschrieben werden. Wird aber eine große Zahl an $\gamma$\,-Quanten betrachtet kann im zeitlichen Mittel der 
+dabei entstehende Energiedifferenz wird in Form von $\gamma$\,-Quanten frei. Ein $\gamma$\,-Quant ist allerdings kein Teilchen im klassischem Sinne. Ebenfalls können einzelne
+$\gamma$\,-Quanten nicht nur durch ihren Wellencharakter beschrieben werden. Wird aber eine große Zahl an $\gamma$\,-Quanten betrachtet, kann im zeitlichen Mittel der 
 Teilchencharakter vernachlässigt werden. Daher kann $\gamma$\,-Strahlung in diesem Versuch als elektromagnetische Welle, mit den typischen Eigenschaften der e-m-Welle,
 betrachtet werden. Daher gilt für $\gamma$\,-Strahlung gemäß der Quantentheorie 
 \begin{equation*}
     E_{\gamma} = \frac{h}{\nu} = \frac{hc}{\lambda}.
 \end{equation*}
-Dabei ist h das Planksche Wirkungsquantum, c die Lichtgeschwindigkeit, $\nu$ die Frequenz und $\lambda$ die Wellenlänge der $\gamma$\,-Strahlung. Das $\gamma$\,-Spektrum ist 
+Dabei ist $h$ das Planksche Wirkungsquantum, $c$ die Lichtgeschwindigkeit, $\nu$ die Frequenz und $\lambda$ die Wellenlänge der $\gamma$\,-Strahlung. Das $\gamma$\,-Spektrum ist 
 nicht kontinuierlich, sonder sehr diskret. Dies folgt aus der Eigenschaft der Energieniveaus der Kerne, denn die Kernenergieniveaus sind genau definiert.
 
 \subsection{\texorpdfstring{Wechselwirkungsverhalten von $\gamma$-Strahlung mit Materie}{Wechselwirkungsverhalten von Gamma-Strahlung mit Materie}}
 \label{Gammawechselwirkung}
-Trifft ein $\gamma$\,-Quant auf Materie tritt es in Wechselwirkung mit dieser. Dabei kann $\gamma$\,-Quant mit unterschiedlichen Bausteinen der Materie wechselwirken. 
+Trifft ein $\gamma$\,-Quant auf Materie, tritt es in Wechselwirkung mit dieser. Dabei kann ein $\gamma$\,-Quant mit unterschiedlichen Bausteinen der Materie wechselwirken. 
 Alle bisher bekannten Wechselwirkungen werden in \autoref{fig:TabelleGamma} dargestellt.
 
 \begin{figure}
@@ -39,21 +39,21 @@ $\gamma$\,-Energiespektrum, eingegangen. Das sind der Photo-Effekt, der Compton-
 
 
 Tritt der (innere) Photoeffekt auf, wechselwirkt ein $\gamma$\,-Quant mit einem Hüllenelektron des Materials. Dadurch wird das $\gamma$\,-Quant annihiliert und Energie und 
-Impuls des $\gamma$\,-Quants werden an das Meterial abgegeben. Dabei erhält das Elektron, mit welchem die Wechselwirkung stattfindet die Energie des $\gamma$\,-Quants.
+Impuls des $\gamma$\,-Quants werden an das Material abgegeben. Dabei erhält das Elektron, mit welchem die Wechselwirkung stattfindet die Energie des $\gamma$\,-Quants.
 Daher kann die Energie des Elektrons durch 
 \begin{equation*}
     E_{\symup{e}} = h\nu - E_{\symup{B}}
 \end{equation*}
 beschrieben werden. Dabei ist $E_{\symup{B}}$ die Bindungsenergie des Elektrons und $h\nu$ die übertragene Energie des $\gamma$\,-Quants. Gilt nun $h\nu > E_{\symup{B}}$, wird
-das Elektron aus der Hülle gelöst(Photoeffekt). Ist jedoch die Bindungsenergie größer ist der Photoeffekt nicht möglich.  Der Impuls des $\gamma$\,-Quants geht dabei auf den 
-Atomkern über. Dies geschieht aber nur, wenn das Elektron fest genug an das Atom gebunden ist, woraus folgt das die Wahrscheinlichkeit des Photoeffekts auf inneren 
-Elektronenschalen größer ist. Daraus folgt wiederum, dass der Wirkungsquerschnitt, welcher im \autoref{subesc:Wirkungsquerschnitt} erläutert wird, proportional zur fünften 
+das Elektron aus der Hülle gelöst(Photoeffekt). Ist jedoch die Bindungsenergie größer, ist der Photoeffekt nicht möglich.  Der Impuls des $\gamma$\,-Quants geht dabei auf den 
+Atomkern über. Dies geschieht aber nur, wenn das Elektron fest genug an das Atom gebunden ist, woraus folgt, dass die Wahrscheinlichkeit des Photoeffekts auf inneren 
+Elektronenschalen größer ist. Daraus folgt wiederum, dass der Wirkungsquerschnitt, welcher im \autoref{subsec:Wirkungsquerschnitt} erläutert wird, proportional zur fünften 
 Potenz der Ordnungszahl und zu $E_\gamma^{-3.5}$ ist.
 
 
-Der Compton-Effekt beschreibt eine Streuung des $\gamma$\,-Quants an einem freien Elektron. Im gegensatz zum Photoeffekt, wo das $\gamma$\,-Quant annihiliert wird, kann ein 
+Der Compton-Effekt beschreibt eine Streuung des $\gamma$\,-Quants an einem freien Elektron. Im Gegensatz zum Photoeffekt, bei welchem das $\gamma$\,-Quant annihiliert wird, kann ein 
 $\gamma$\,-Quant nicht seine gesamte Energie an ein freies Elektron abgeben. Daher bleibt bei dem Comptoneffekt immer ein $\gamma$\,-Quant erhalten. Durch die Energie- und 
-Impuls-Übertragung des $\gamma$\,-Quants an das Elektron ändert sich aber die Richtung und Intensität des $\gamma$\,-Quants. 
+Impuls-Übertragung des $\gamma$\,-Quants an das Elektron ändert sich aber die Richtung und Energie des $\gamma$\,-Quants. 
 
 Für die Paarbildung muss die Energie des $\gamma$\,-Quants größer als die dopellte Ruhemasse des Elektrons sein. Ist diese Energie gegeben kann ein $\gamma$\,-Quant unter 
 Kollision annihiliert werden und somit ein Elektron und ein Positron bilden. Dabei wird ein gewisser Impuls an den Stoßpartner übertragen.
@@ -68,19 +68,19 @@ Energie ab $\qty{1}{\mega\electronvolt}$ setzt die Paarbildung ein. Ab circa $\q
 \label{subsec:Betastrahlung}
 $\beta$\,-Teilchen können in instabilen Atomkernen entstehen. Dabei kann ein Neutron in ein Proton, ein $\beta^+$\,-Teilchen und ein Antielektronenneutrino oder
 ein Proton in ein Neutron, ein $\beta^-$\,-Teilchen und ein Elektronenneutrino zerfallen. Die dabei entstehenden $\beta$\,-Teilchen sind positive oder negative schnelle
-Elektronen. Da sich die freiwerdene Umwandlungsenergie statistisch auf die entstehenden Teilchen verteilt, entsteht beim $\beta$\,-Strahler ein kontinuierliches Spektrum.
+Elektronen. Da sich die frei werdende Umwandlungsenergie statistisch auf die entstehenden Teilchen verteilt, entsteht beim $\beta$\,-Strahler ein kontinuierliches Spektrum.
 
 \subsection{\texorpdfstring{Wechselwirkungsverhalten von $\beta$-Strahlung mit Materie}{Wechselwirkungsverhalten von Beta-Strahlung mit Materie}}
 \label{BetaWechselwirkung}
-Trifft ein $\beta$\,-Teilchen nun auf eine Absorberschicht können im wesentlichen drei dominierende Prozesse auftreten.
+Trifft ein $\beta$\,-Teilchen nun auf eine Absorberschicht, können im wesentlichen drei dominierende Prozesse auftreten.
 
 
 Zum einen kann die Rutherford-Streuung auftreten. Diese beschreibt eine elastische Streuung am Atomkern des Absorbermaterials. Dabei werden die $\beta$\,-Teilchen, welche 
-als paralleles Strahlenbündel auf das Meterial treffen durch die elektrischen Felder der Atomkerne abgelengt. Dies hat eine breite statistische Verteilung an Richtungen 
+als paralleles Strahlenbündel auf das Material treffen durch die elektrischen Felder der Atomkerne abgelenkt. Dies hat eine breite statistische Verteilung an Richtungen 
 zufolge. Außerdem kann es durch diese Streuung passieren, dass die Reichweite $R$ der $\beta$\,-Teilchen nicht mehr ausreicht um wieder aus dem Material auszutreten. 
 
 
-Des weiteren kann aber auch eine inelastische Streuung an den Atomkernen stattfinden. Durch die Ablenkungen im elektrischen Feld muss Energie abgestrahlt werden. Diese 
+Des Weiteren kann aber auch eine inelastische Streuung an den Atomkernen stattfinden. Durch die Ablenkungen im elektrischen Feld muss Energie abgestrahlt werden. Diese 
 Energie wird Bremsstrahlung genannt, weil die $\beta$\,-Teilchen durch die abgestrahlte Energie an Geschwindigkeit verlieren. Die Wahrscheinlichkeit für diesen Prozess
 wird durch den Wirkungsquerschnitt
 \begin{equation*}
@@ -91,62 +91,60 @@ beschrieben. Die Energie der Bremsstrahlung kann durch Integration aller Streuwi
     E_{\symup{Br}} = 7\cdot 10^{-7} z E_\beta^2
 \end{equation*}
 berechnet werden. Dabei ist $E_\beta$ die Energie der $\beta$\,-Teilchen. Diese Gleichung gilt nur Näherungsweise für Energien $E_\beta$ bis zu $\qty{2500}{\kilo\electronvolt}$. 
-Aus verschiedenen Berchungen zeigt sich, dass diese Form der Energieabgabe nur eine untergeordnete Rolle in der Absorption von $\beta$\,-Teilchen spielt.
+Aus verschiedenen Berechnungen zeigt sich, dass diese Form der Energieabgabe nur eine untergeordnete Rolle in der Absorption von $\beta$\,-Teilchen spielt.
 
 Eine weitere Energieabgabe der $\beta$\,-Teilchen liegt in der inelastischen Streuung an Elektronen. Hierbei gibt des $\beta$\,-Teilchen bei jedem Stoß einen kleinen Teil der
-Energie ab, wodruch des gestoßene Atom ionisiert wird. Dieser Prozess kann für jedes $\beta$\,-Teilchen häufig auftreten. Die Wahrscheinlichkeit für für diesen Prozess
-ist proportional zur Ordnungszahl und zu Anzahl der Atome pro Volumen im Material. Der Energieverlust pro Stoßprozess kann bei $\beta$\,-Teilchen mit Energien kleiner als
-$m_0 c^2$ ist durch 
+Energie ab, wodurch das gestoßene Atom ionisiert wird. Dieser Prozess kann für jedes $\beta$\,-Teilchen häufig auftreten. Die Wahrscheinlichkeit für diesen Prozess
+ist proportional zur Ordnungszahl und zur Anzahl der Atome pro Volumen im Material. Der Energieverlust pro Stoßprozess kann bei $\beta$\,-Teilchen mit Energien kleiner als
+$m_0 c^2$ durch 
 \begin{equation}
     \label{eqn:inelast_elek_everlust}
     \frac{\symup{d}E}{\symup{d}x} = -\frac{2\pi r_e^2}{E_\beta}\frac{N_L\rho}{M}z\symup{ln}\frac{E_\beta}{I}
 \end{equation}
-beschrieben. Hier beschreibt $I$ die Ionisationsenergie des Absorbermaterials.
+beschrieben werden. Hier beschreibt $I$ die Ionisationsenergie des Absorbermaterials.
 
 \subsection{Wirkungsquerschnitt}
 \label{subsec:Wirkungsquerschnitt}
-Wie bisher beschrieben treten verschiedene Wechselwirkungen beim Eintreten von Strahlung in Materie auf. Die Häufigkeit dieser Wechselwirkungen pro Teilchen und pro Fläch
+Wie bisher beschrieben, treten verschiedene Wechselwirkungen beim Eintreten von Strahlung in Materie auf. Die Häufigkeit dieser Wechselwirkungen pro Teilchen und pro Fläche
 wird Wirkungsquerschnitt $\sigma$ genannt. 
-Für einen \textit{vereinfachten} Absorber der Dicke $D$ mit einer Querschnittsfläche $F$ und n Teilchen pro Volumeneinheit kann der Wirkungsquerschnitt für ein eintreffendes
+Für einen \textbf{vereinfachten} Absorber der Dicke $D$ mit einer Querschnittsfläche $F$ und n Teilchen pro Volumeneinheit kann der Wirkungsquerschnitt für ein eintreffendes
 Teilchen gemäß 
 \begin{equation*}
     \sigma = \frac{W}{nD},
 \end{equation*}
-mit der Wahrscheinlichkeit einer Wechselwirkung $W$, berechnet werden. Bei einem \textit{vereinfachter} Absorber würden die einzelnen Atome einander in Strahlungsrichtung nicht
-überdecken. Da diese Annahme allerdings sehr realitätsfern ist, wird eine allgemeinere Form für den Wirkungsquerschnitt benötigt. Dieser kann durch Betrachtung infinitesimaler
-kleiner Absorberstücke erreciht werden. Integriert man über alle Schichten ergibt sich ein exponentielles Absorptionsgesetz. Dieses ist mit 
+mit der Wahrscheinlichkeit einer Wechselwirkung $W$, berechnet werden. Bei einem \textbf{vereinfachten} Absorber würden die einzelnen Atome einander in Strahlungsrichtung nicht
+überdecken. Da diese Annahme allerdings sehr realitätsfern ist, wird eine allgemeinere Form für den Wirkungsquerschnitt benötigt. Diese kann durch Betrachtung infinitesimaler
+kleiner Absorberstücke erreicht werden. Wird über alle Schichten integriert, ergibt sich ein exponentielles Absorptionsgesetz. Dieses ist mit 
 \begin{equation}
     \label{eqn:eabsorbgesetz}
     N(D) = N_0 \symup{e}^{-n\sigma D}
 \end{equation}
-gegeben. Der Faktor im exponenten wird nun als Absorptionskoeffizient $\mu$ definiert mit 
+gegeben. Der Faktor im Exponenten wird nun als Absorptionskoeffizient $\mu$ definiert mit 
 \begin{equation}
     \mu = n\sigma.
 \end{equation}
-Da es sich bei dem Absorptionsgesetz um einen einfachen exponentiellen Zusammenhang handelt gilt hier das Halbwärtsproblem und es ergibt sich 
+Da es sich bei dem Absorptionsgesetz um einen einfachen exponentiellen Zusammenhang handelt, gilt hier das Halbwärtsproblem und es ergibt sich 
 \begin{equation}
     \label{eqn:halbswärtsdicke}
     D_{1/2} = \frac{\symup{ln}2}{\mu},
 \end{equation}
 mit der Halbswärtsdicke $D_{1/2}$.
 
-Nachdem nun ein grundlegendes Verständnis des Wirkungsquerschnittes vorhanden ist, wird nun über die speizifischen Wirkungsquerschnitte der einzelnen Effekte, welche
-bei den verschiedenen Teilchen auftreten. 
 Der Wirkungsquerschnitt des Comptoneffektes ist durch
 \begin{equation}
     \label{eqn:sigma_com}
     \sigma_{\symup{com}} = 2\pi r_{e}^2\left(\frac{1 + \epsilon}{\epsilon^2}\left( \frac{2(1+\epsilon)}{1+2\epsilon} - \frac{1}{\epsilon}\symup{ln}(1+2\epsilon)\right)+\frac{1}{2\epsilon}\symup{ln}(1+2\epsilon) - \frac{1 + 3\epsilon}{(1+2\epsilon)^2}\right)
 \end{equation}
-gegeben. Dabei ist $\epsilon$ das Verhältnis von der Gammaquantenenergie zur Ruheenergie des Elektrons. Mit diesem Wirkungsquerschnitt lässt sich die Comptonabsorptionskonstante 
-bestimmen. Diese ist gegeben durch 
+gegeben. Dabei ist $\epsilon$ das Verhältnis der Gammaquantenenergie zur Ruheenergie des Elektrons. Mit diesem Wirkungsquerschnitt lässt sich die Comptonabsorptionskonstante 
+bestimmen. Diese ist durch 
 \begin{equation}
     \label{eqn:mu_com}
     \mu_{\symup{com}} = n\sigma_{\symup{com}}(\epsilon) = \frac{zN_L\rho}{M}\sigma_{\symup{com}}(\epsilon)
 \end{equation}
 gegeben. Aufgrund der Energieabhängigkeit des Comptonwirkungsquerschnittes kann für kleine Energien, was physikalisch eine elastische Streuung beschreibt, der 
-\textit{Thomasonsche Wirkungsquerschnitt $\sigma_com$} genähert werden. Dieser lautet 
+\textit{Thomsonsche Wirkungsquerschnitt} $\sigma_\text{Th}$ genähert werden. Dieser lautet 
 \begin{equation}
-    \sigma_{\symup{com}} = \frac{8}{3}\pi r_e^2
+    \sigma_{\symup{Th}} = \frac{8}{3}\pi r_e^2
 \end{equation}
 
 Für $\beta$\,-Strahlung ist der Wirkungsquerschnitt, welcher aus der Bremsstrahlung entsteht, gegeben durch 
@@ -154,20 +152,20 @@ Für $\beta$\,-Strahlung ist der Wirkungsquerschnitt, welcher aus der Bremsstrah
     \label{eqn:sigma_br}
     \sigma_{\symup{Br}} = \alpha r_e^2z^2,
 \end{equation}
-mit $\alpha$ als Sommerfeldschen Feinstruckturkonstanten.
+mit der Sommerfeldschen Feinstrukturkonstanten $\alpha$.
 
 \subsection{Absorptionskurve von Betastrahlung}
 \label{subsec:Absorptionskurve}
 Wie bereits erwähnt wurde, treten bei $\beta$\,-Teilchen in einer Absorberschicht viele verschiedene Wechselwirkungen auf. Daher ist ein analytischer Zusammenhang zwischen 
 der Dicke des Absorbers und der Intensität der Strahlung nur schwierig aufzustellen. Allerdings kann für natürliche  $\beta$\,-Strahlung eine Näherung durch ein bereits 
-beschriebenes einfaches Absorptionsgesetz verwendet werden. Diese ist nur für relativ dünne Absorberschichten gültig. In der \autoref{fig:Absorptionskurve} Skizze wird der
+beschriebenes einfaches Absorptionsgesetz verwendet werden. Diese ist nur für relativ dünne Absorberschichten gültig. In \autoref{fig:Absorptionskurve} wird der
 gewollte Zusammenhang von $D$ und $n(D)$ mit der Näherung dargestllt. Dabei wird anstatt der Dicke $D$ die Massenbelegung $R$, welche über $R = \rho D$ zusammenhängen, verwendet.
 Der in der \autoref{fig:Absorptionskurve} eingezeichnete Punkt $R_{\symup{max}}$ beschreibt die maximale Reichweite der Strahlung.
 
 \begin{figure}
     \centering
     \includegraphics[width = 0.7\textwidth]{content/Absorptionskurve.PNG}
-    \caption{In dieser Abbildung ist der allgemeine Verlauf eine Absorptionskurve dargestellt. \cite{v704}.}
+    \caption{In dieser Abbildung ist der allgemeine Verlauf einer Absorptionskurve dargestellt. \cite{v704}.}
     \label{fig:Absorptionskurve}
 \end{figure}
 
