Theorie nur angefangen chill

--- a/lit.bib
+++ b/lit.bib
@@ -182,3 +182,10 @@
 	urldate = {2022-06-02},
 	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
 }
+
+@online{v703,
+	title        = {703 - Das Geiger-Müller-Zählrohr},
+	organization = {TU Dortmund},
+	urldate      = {2022-06-08},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977248/mod_resource/content/2/V703.pdf},
+}
